# tfhe-backward-compat-data

./: Cargo.toml  README.md  _typos.toml
.github/workflows/: cargo_build.yml  rebase_latest_version.yml
data/: high_level_api.ron  shortint.ron
data/0_11/high_level_api/: public_key.cbor
data/0_6/high_level_api/: server_key.bcode  server_key.cbor
data/0_7/high_level_api/: client_key.cbor.bcode  client_key.cbor.cbor  client_key_dest.cbor  hl_compressed_heterogeneous_list.bcode  hl_compressed_heterogeneous_list.cbor  hl_heterogeneous_list.bcode  hl_heterogeneous_list.cbor  hl_ksk.bcode  hl_ksk.cbor  hl_packed_heterogeneous_list.bcode  hl_packed_heterogeneous_list.cbor  server_key_with_compression.bcode  server_key_with_compression.cbor
data/0_8/high_level_api/: hl_proven_heterogeneous_list.bcode  hl_proven_heterogeneous_list.cbor  hl_proven_packed_heterogeneous_list.bcode  hl_proven_packed_heterogeneous_list.cbor  public_key.cbor  server_key.bcode  server_key.cbor  server_key_with_compression.bcode  server_key_with_compression.cbor
data/0_9/high_level_api/: compressed_server_key.bcode  compressed_server_key.cbor
data/1_0/high_level_api/: client_key_ms_noise_reduction.bcode  client_key_ms_noise_reduction.cbor  server_key_ms_noise_reduction.bcode  server_key_ms_noise_reduction.cbor
src/: data_0_10.rs  data_0_11.rs  data_0_6.rs  data_0_7.rs  data_0_8.rs  data_0_9.rs  data_1_0.rs  data_1_1.rs  generate.rs  lib.rs  load.rs  main.rs
