[package]
name = "tfhe-backward-compat-data"
version = "0.3.0"
license = "BSD-3-Clause-Clear"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# This is a list of tfhe-rs versions we will generate data for. This list will grow over time.
# They are only activated when generating data, with the binary target and the "generate" feature.
tfhe_0_8 = { version = "0.8", features = [
  "boolean",
  "integer",
  "shortint",
  "x86_64-unix",
  "zk-pok",
  "experimental-force_fft_algo_dif4",
], package = "tfhe", optional = true }
tfhe_0_9 = { version = "0.9", features = [
  "boolean",
  "integer",
  "shortint",
  "x86_64-unix",
  "zk-pok",
  "experimental-force_fft_algo_dif4",
], package = "tfhe", optional = true, git = "https://github.com/zama-ai/tfhe-rs/", branch = "am/chore/make-ks-level-order-consistent" }

tfhe_0_8-versionable = { version = "0.3", optional = true, package = "tfhe-versionable" }
tfhe_0_9-versionable = { version = "0.3", optional = true, package = "tfhe-versionable", git = "https://github.com/zama-ai/tfhe-rs/", branch = "am/chore/make-ks-level-order-consistent" }

# other deps
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
semver = { version = "1.0", optional = true }
ron = { version = "0.8", features = ["integer128"] }
ciborium = "0.2"
bincode = "1.3"

[[bin]]
name = "tfhe-backward-compat-data"
required-features = ["generate"]

[features]
default = ["generate"]

generate = [
  "dep:tfhe_0_8",
  "dep:tfhe_0_9",
  "dep:tfhe_0_8-versionable",
  "dep:tfhe_0_9-versionable",
]
load = ["dep:semver"]
